--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
 	.i-icon-menu:before {
       content: ""
     }
+	
+	/*
+	.i-icon-menu:before {
+      content: ""
+    }
+	*/
 
 </style></head>
 
@@ -176,7 +182,11 @@
 		<div class="weui_cell base_cell">
 	        <!--<div class="weui_cell_ft"><a href="http://e-office.nuist.edu.cn/taskcenter/wechat/appall"><i class="iconfont"></i>全部事项</a></div>-->
 			<!--<div class="weui_cell_ft"><a href="allmatters.html"><img src="images/icon_menu_1.png" width="20px">全部事项</a></div>-->
-			<div class="weui_cell_ft"><a href="allmatters.html"><i class="i-icon-menu"></i>全部事项</a></div>
+			<!--<div class="weui_cell_ft"><a href="allmatters.html"><i class="i-icon-menu"></i>全部事项</a></div>-->
+			<div class="weui_cell_ft"><a href="allmatters.html"><div id=title_icon class=title_icon><i class=i-icon-menu></i></div></a></div>
+			<div id=title_content style=max-width:253px>
+				<nobr class="title"></nobr>
+			</div>
 	        <div class="weui_cell_bd weui_cell_primary">
 	          <!-- <p><i class="logo"></i>USC</p>-->
 				 <p class="logo1" style="margin-right:40px;">大学服务中心</p>
@@ -341,6 +351,7 @@
 </div>
 
 <script type="text/javascript">
+	$('.title').text('全部事项')
 </script>
 	<div class="modal-qh"></div>
 	<div class="modal-rate"></div>
