--- a/outrender.html
+++ b/outrender.html
@@ -131,10 +131,21 @@
                     </div>
                     <div id="command_holder">
                         <div class="clear"></div>
+                        <div id="command_bar_title_icon" class="title_icon doing" style="display: none;"><i class="i-icon-menu"></i></div>
+                        <ul id="form_command_bar">
+                            <li class="command_button kill" style=""><a class="command_button_content kill" name="infoplus_action_1056_kill"
+                                    id="infoplus_action_1056_kill">
+                                    <nobr>终止</nobr>
+                                </a></li>
+                        </ul>
+                    </div>
+                    <!--
+                    <div id="command_holder">
+                        <div class="clear"></div>
                         <ul id="form_command_bar">
                             <li class="no_action">此任务已处理,您无需任何操作</li>
                         </ul>
-                    </div>
+                    </div>-->
                     <!-- 1.form command bar  
         <div id="command_holder">
             <div class="clear"></div>
