--- a/qrcodeout.html
+++ b/qrcodeout.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -145,7 +144,7 @@
   <div class="content-box">
     <div class="body-content" style="width: 260px">
       <div id="div_bt" style="font-size: 20px"></div>
-      <div id="div_xm" style="font-weight: bold; font-family:"Microsoft YaHei"; font-size: 1rem;padding-top: 30px;"></div>
+      <div id="div_xm" style="font-weight: bold; font-family:'Microsoft YaHei'; font-size: 1rem;padding-top: 30px;"></div>
       <div id="div_bm" style="font-weight: bold; font-size: 1rem;"></div>
       <div id="div_timer" style="font-weight: bold; font-size: 1.5rem;"></div>
       <div id="div_ewm_p">
