--- a/qrcodeout.html
+++ b/qrcodeout.html
@@ -144,9 +144,9 @@
   <div class="content-box">
     <div class="body-content" style="width: 260px">
       <div id="div_bt" style="font-size: 20px"></div>
-      <div id="div_xm" style="font-weight: bold; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 1rem;padding-top: 30px;"></div>
-      <div id="div_bm" style="font-weight: bold; font-size: 1rem;"></div>
-      <div id="div_timer" style="font-weight: bold; font-size: 1.5rem;"></div>
+      <div id="div_xm" style="font-weight: bolder; font-family:'Microsoft YaHei'; font-size: 1rem;padding-top: 30px;"></div>
+      <div id="div_bm" style="font-weight: bolder; font-size: 1rem;"></div>
+      <div id="div_timer" style="font-weight: bolder; font-size: 1.5rem;"></div>
       <div id="div_ewm_p">
         <div id="div_ewm">
         </div>
