--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 	        <!--<div class="weui_cell_ft"><a href="http://e-office.nuist.edu.cn/taskcenter/wechat/appall"><i class="iconfont"></i>全部事项</a></div>-->
 			<!--<div class="weui_cell_ft"><a href="allmatters.html"><img src="images/icon_menu_1.png" width="20px">全部事项</a></div>-->
 			<!--<div class="weui_cell_ft"><a href="allmatters.html"><i class="i-icon-menu"></i>全部事项</a></div>-->
-			<div class="weui_cell_ft"><a href="allmatters.html"><div id=title_icon class=title_icon><i class=i-icon-menu></i></div></a></div>
+			<div class="weui_cell_ft"><a href="allmatters.html"><div id=title_icon class=title_icon><i class=i-icon-menu></i></div></div>
 			<div id=title_content style=max-width:253px>
-				<nobr class="title"></nobr>
+				<nobr class="title"></nobr></a>
 			</div>
 	        <div class="weui_cell_bd weui_cell_primary">
 	          <!-- <p><i class="logo"></i>USC</p>-->
