--- a/qrcodeout.html
+++ b/qrcodeout.html
@@ -112,7 +112,6 @@
     margin-top: 10px;
   }
 
-
   #div_ewm_p {
     border: solid 5px;
     padding: 4px;
@@ -144,9 +143,9 @@
   <div class="content-box">
     <div class="body-content" style="width: 260px">
       <div id="div_bt" style="font-size: 20px"></div>
-      <div id="div_xm" style="font-weight: bolder; font-family:'Microsoft YaHei'; font-size: 1rem;padding-top: 30px;"></div>
-      <div id="div_bm" style="font-weight: bolder; font-size: 1rem;"></div>
-      <div id="div_timer" style="font-weight: bolder; font-size: 1.5rem;"></div>
+      <b><div id="div_xm" style="font-weight: bold; font-size: 1rem;padding-top: 30px;"></div></b>
+      <div id="div_bm" style="font-weight: bold; font-size: 1rem;"></div>
+      <div id="div_timer" style="font-weight: bold; font-size: 1.5rem;"></div>
       <div id="div_ewm_p">
         <div id="div_ewm">
         </div>
