-webkit-text-size-adjust

--- a/outrender.html
+++ b/outrender.html
@@ -78,6 +78,10 @@
         list-style: none;
         float: right
     }
+
+    body{
+    -webkit-text-size-adjust: 100% !important;
+    }
 </style>
 
 <body>
