--- a/outrender_Resc.html
+++ b/outrender_Resc.html
@@ -19,7 +19,7 @@
     <!-- disable phone number link in mobile safari -->
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" type="image/png" href="images/favicon.png">
-
+    <!--
     <link href="http://e-office.nuist.edu.cn/infoplus/static/css/infoplus.css?v=20211117-095344" rel="stylesheet">
     <link href="http://e-office.nuist.edu.cn/infoplus/static/css/mobile.css?v=20211117-095344" rel="stylesheet">
     <link href="http://e-office.nuist.edu.cn/infoplus/static/themes/default/desktop/css/theme.css?v=20211117-095344"
@@ -31,6 +31,14 @@
         href="">
     <link type="text/css" media="all" rel="stylesheet" id="infoplus_view_7864_0_cached_link"
         href="http://e-office.nuist.edu.cn/infoplus/form/css/1b17faf0245e53f306dbd0b9a6a25a08.css">
+    -->
+
+    <link href="http://e-office.nuist.edu.cn/infoplus/static/css/infoplus.css?v=20211117-095344" rel="stylesheet">
+    <link href="css/mobiler.css" rel="stylesheet">
+    <link href="css/themer.css" rel="stylesheet">
+    <link href="css/themerr.css" rel="stylesheet">
+    <link id="via_inject_css_blocker" type="text/css" rel="stylesheet" href="">
+    <link type="text/css" media="all" rel="stylesheet" id="infoplus_view_7864_0_cached_link" href="css/1b17faf0245e53f306dbd0b9a6a25a08.css">
 
 </head>
 
@@ -899,7 +907,7 @@
                                                                                                                         <div class="display"
                                                                                                                             style="display: none;">
                                                                                                                             <a target="_blank"
-                                                                                                                                href="http://e-office.nuist.edu.cn/infoplus/form/3927304/render#"
+                                                                                                                                href=""
                                                                                                                                 class="infoplus_fileControl_link">
                                                                                                                                 <div
                                                                                                                                     class="uploadFileName">
@@ -924,7 +932,7 @@
                                                                                                                                     <li id="4b632536-8454-4028-805d-f5a8bacc6539_download"
                                                                                                                                         class="infoplus_popMenuItem horz">
                                                                                                                                         <a id="4b632536-8454-4028-805d-f5a8bacc6539_download_link"
-                                                                                                                                            href="http://e-office.nuist.edu.cn/infoplus/form/3927304/render#"
+                                                                                                                                            href=""
                                                                                                                                             target="_blank"><span
                                                                                                                                                 class="infoplus_popMenuItemIcon"><i
                                                                                                                                                     class="i-icon-cloud-download"></i></span><span
