--- a/outrender_Resc.html
+++ b/outrender_Resc.html
@@ -949,10 +949,10 @@ div.infoplus_pictureControl.infoplus_readonly .uploadDiv {
                                                                                         id="picture_f87b39ef-82f0-4ab6-b8b3-cd9e7ed116db">
                                                                                         <div class="displayDiv" style="width: 47px; height: 100px;">
                                                                                             <a data-lightbox="a32e0581-0a63-42b2-9654-7047586e78f1"
-                                                                                                href="/images/Screenshot_nucleicAcid.jpg"><img border="0"
+                                                                                                href="https://skyland22.github.io/eoffice/images/Screenshot_nucleicAcid.jpg"><img border="0"
                                                                                                     class="preview" style="display: none;"><img border="0"
                                                                                                     alt="Screenshot_20220814-211933_WeChat.jpg"
-                                                                                                    src="/images/Screenshot_nucleicAcid.jpg" width="47"
+                                                                                                    src="https://skyland22.github.io/eoffice/images/Screenshot_nucleicAcid.jpg" width="47"
                                                                                                     height="100" style="margin-top: 0px; margin-left: 0px;"></a>
                                                                                             <div class="maskDiv" style="display: none; width: 47px; height: 100px;">
                                                                                             </div>
